# tiny-transformer

./: .gitignore  main.py  pyproject.toml  train.py
dataset/: __init__.py  translation_dataset.py
model/: __init__.py  attention.py  casual_self_attention.py  decoder.py  encoder.py  feed_forward.py  mlp.py  model_config.py  positional_encoding.py  tiny_transformer.py
